# Linkedin-Ads-MCP

./: .env.example  .gitignore  account_pages.json  bid_pacer.py  bid_pacing_history.json  bid_pacing_rules.json  bulk_ads_template.csv  bulk_create_ads.py  bulk_fin.csv  create_ticketmind_campaign.py  creative_pipeline.py  dashboard.py  deploy_creatives.sh  get_token.py  july8_con_tof.csv  july8_retry_mof.csv  july8_retry_tof.csv  linkedin_ads_server.py  linkedin_cli.py  pyproject.toml  requirements.txt  scheduler.py  server_http.py  test_create_ad.py  test_creative_only.py  test_linkedin_ads_mcp.py  test_upload_debug.py  ticketmind.json
docs/: creating-image-ads.md
skills/linkedin-ads/: SKILL.md
templates/: dashboard.html
